--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+        <section></section>
+    </div>
 </body>
 
 </html>
